--- a/templates/pages/home.html
+++ b/templates/pages/home.html
@@ -1,11 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
+<!-- templates/pages/home.html -->
+{% extends 'base.html' %}
+
+{% block title %}Home{% endblock %}
+
+{% block content %}
     <h1>Home Page</h1>
-    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, minima deserunt molestias eligendi quidem eum veniam iusto porro libero est, voluptates suscipit dignissimos molestiae. Similique libero alias nam eveniet cumque!</p>
-</body>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Nam, minima deserunt molestias eligendi quidem eum veniam iusto porro libero est, voluptates suscipit dignissimos molestiae.</p>
+{% endblock %}
+
+<!-- templates/pages/about.html -->
+{% extends 'base.html' %}
+
+{% block title %}About Me{% endblock %}
+
+{% block content %}
+    <h1>About Me</h1>
+    <h2>Your Name Here</h2>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis ducimus tempora dolorem reprehenderit soluta quam asperiores repellat a est maxime quae impedit accusamus consequatur nostrum praesentium.</p>
+{% endblock %}
