--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -6,17 +7,19 @@
     <title>
         {% block title %}Blog{% endblock %}
     </title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
     {% block css %}{% endblock %}
 </head>
 <body>
-    {% include 'navbar.html' %}
+    {% include 'partials/navbar.html' %}
     
     <div class="container" style="margin-top: 75px;">
         {% block content %}{% endblock %}
     </div>
-
+    
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     {% block js %}{% endblock %}
+
+    {% include 'partials/footer.html' %}
 </body>
 </html>
