--- a/templates/pages/about.html
+++ b/templates/pages/about.html
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>About</h1>
-    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Facilis ducimus tempora dolorem reprehenderit soluta quam asperiores repellat a est maxime quae impedit accusamus consequatur nostrum praesentium, at sit ipsa quis.</p>
-</body>
-</html>
+{% extends 'base.html' %}
+
+{% block title %}About Me{% endblock %}
+
+{% block content %}
+    <h1>About Me</h1>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Facilis ducimus tempora dolorem reprehenderit soluta quam asperiores repellat a est maxime quae impedit accusamus consequatur nostrum praesentium.</p>
+{% endblock %}
