--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -1,24 +1,25 @@
-<nav class="navbar navbar-dark bg-dark fixed-top">
-    <div class="container-fluid">
-        <a class="navbar-brand" href="{% url 'home' %}">Blog</a>
-        <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
-            <div class="offcanvas-header">
-                <h5 class="offcanvas-title" id="offcanvasNavbarLabel">Blog</h5>
-                <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-            </div>
-            <div class="offcanvas-body">
-                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                    <li class="nav-item">
-                        <a class="nav-link active" aria-current="page" href="{% url 'home' %}">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="{% url 'about' %}">About</a>
-                    </li>
-                </ul>
-            </div>
-        </div>
+<nav class="navbar">
+    <div class="navbar-container">
+        <a class="navbar-brand" href="{% url 'home' %}">BLOG</a>
+        <ul class="navbar-nav">
+            <li><a href="{% url 'home' %}">HOME</a></li>
+            <li><a href="{% url 'about' %}">ABOUT</a></li>
+            
+            {% if user.is_authenticated %}
+                <!-- Show these links when user is logged in -->
+                <li><a href="{% url 'posts:list' %}">POSTS</a></li>
+                <li><a href="{% url 'posts:new' %}">CREATE POST</a></li>
+                <li><a href="#">{{ user.username }}</a></li>
+                <li>
+                    <form method="post" action="{% url 'logout' %}" style="display: inline; margin: 0;">
+                        {% csrf_token %}
+                        <button type="submit" class="logout-btn">LOGOUT</button>
+                    </form>
+                </li>
+            {% else %}
+                <!-- Show these links when user is NOT logged in -->
+                <li><a href="{% url 'login' %}">LOGIN</a></li>
+            {% endif %}
+        </ul>
     </div>
 </nav>
