--- a/templates/partials/navbar.html
+++ b/templates/partials/navbar.html
@@ -1,19 +1,18 @@
-<nav class="navbar">
-    <div class="navbar-container">
-        <a class="navbar-brand" href="{% url 'home' %}">BLOG</a>
-        <ul class="navbar-nav">
+<nav class="blog-navbar">
+    <div class="blog-nav-wrapper">
+        <a class="blog-logo" href="{% url 'home' %}">BLOG</a>
+        <ul class="blog-nav-links">
             <li><a href="{% url 'home' %}">HOME</a></li>
             <li><a href="{% url 'about' %}">ABOUT</a></li>
             
             {% if user.is_authenticated %}
                 <!-- Show these links when user is logged in -->
                 <li><a href="{% url 'posts:list' %}">POSTS</a></li>
-                <li><a href="{% url 'posts:new' %}">CREATE POST</a></li>
                 <li><a href="#">{{ user.username }}</a></li>
                 <li>
                     <form method="post" action="{% url 'logout' %}" style="display: inline; margin: 0;">
                         {% csrf_token %}
-                        <button type="submit" class="logout-btn">LOGOUT</button>
+                        <button type="submit" class="blog-logout-btn">LOGOUT</button>
                     </form>
                 </li>
             {% else %}
