--- a/templates/posts/delete.html
+++ b/templates/posts/delete.html
@@ -9,7 +9,7 @@
     <div style="text-align: center; margin: 2rem 0;">
         <h3 style="color: #f56565;">Are you sure you want to delete this post?</h3>
         <p style="color: #4a5568; margin-top: 1rem;">
-            <strong>Title:</strong> My First Blog Post
+            <strong>Title:</strong> {{ post.title }}
         </p>
         <p style="color: #a0aec0; font-style: italic;">
             This action cannot be undone.
@@ -20,7 +20,7 @@
         {% csrf_token %}
         <div class="post-actions centered">
             <button type="submit" class="btn btn-danger">Yes, Delete</button>
-            <a href="{% url 'posts:list' %}" class="btn btn-secondary">Cancel</a>
+            <a href="{% url 'posts:detail' post.pk %}" class="btn btn-secondary">Cancel</a>
         </div>
     </form>
 </div>
