Complete blog project with CRUD, authentication, comments, and custom styling

--- a/templates/posts/comment_edit.html
+++ b/templates/posts/comment_edit.html
@@ -1,11 +1,11 @@
 {% extends 'base.html' %}
 
-{% block title %}Edit Post{% endblock %}
+{% block title %}Edit Comment{% endblock %}
 
 {% block content %}
-<div class="post-form-container">
-    <h1 class="centered">Edit Post</h1>
-    <form method="post" enctype="multipart/form-data">
+<div class="post-form-container narrow">
+    <h1 class="centered">Edit Comment</h1>
+    <form method="post">
         {% csrf_token %}
         
         {% for field in form %}
@@ -22,9 +22,8 @@
         {% endfor %}
 
         <div class="post-actions centered">
-            <button type="submit" name="save_draft" class="btn btn-draft">Save as Draft</button>
-            <button type="submit" name="publish" class="btn btn-success">Publish</button>
-            <a href="{% url 'posts:detail' object.pk %}" class="btn btn-secondary">Cancel</a>
+            <button type="submit" class="btn btn-success">Save Changes</button>
+            <a href="{% url 'posts:detail' object.post.pk %}" class="btn btn-secondary">Cancel</a>
         </div>
     </form>
 </div>
