--- a/templates/posts/new.html
+++ b/templates/posts/new.html
@@ -24,7 +24,7 @@
         <div class="post-actions centered">
             <button type="submit" name="save_draft" class="btn btn-draft">Save as Draft</button>
             <button type="submit" name="publish" class="btn btn-success">Publish</button>
-            <a href="{% url 'posts:list' %}" class="btn btn-warning">Cancel</a>
+            <a href="{% url 'posts:list' %}" class="btn btn-secondary">Cancel</a>
         </div>
     </form>
 </div>
