--- a/static/css/style.css
+++ b/static/css/style.css
@@ -80,6 +80,7 @@ body::before {
     list-style: none;
     gap: 0.6rem;
     margin: 0;
+    margin-left: auto;
     padding: 0;
     align-items: center;
 }
